Implemented test cases